--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "react": "^16.13.1",
     "react-native": "^0.63.4",
     "react-native-testing-library": "^2.2.0",
-    "react-native-webview": "^11.2.1",
+    "react-native-webview": "11.2.1",
     "react-test-renderer": "16.13.1",
     "typescript": "^3.9.7"
   },
